website/src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap');

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #048fc0;
  --ifm-color-primary-dark: #253282;
  --ifm-color-primary-darker: #161360;
  --ifm-color-primary-darkest: #150a51;
  --ifm-color-primary-light: #6c43a3;
  --ifm-color-primary-lighter: #8859c9;
  --ifm-color-primary-lightest: #9f6de5;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: #d9e5f6;
}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

.header-github-link:hover {
  opacity: 0.6;
}

.header-github-link:before {
  content: '';
  width: 24px;
  height: 24px;
  display: flex;
  background: url('@site/static/img/showcase/gh-nav-light.svg') no-repeat;
}

html[data-theme='dark'] .header-github-link:before {
  background: url('@site/static/img/showcase/gh-nav-dark.svg') no-repeat;
}

.footer {
  background-color: #ffffff;
  border-top: 1px solid #f2eeeee8;
}

html[data-theme='dark'] {
  --ifm-background-color: #202429;
}

[data-theme='dark'] .footer {
  /* background-color: #1b1b1d; */
  background-color: #202429;
  border-top: 1px solid #313439;
}

.footer-gh-footer {
  background: url(@site/static/img/showcase/gh-footer-light.svg) no-repeat;
  content: 'Footer';
  display: inline-flexbox;
  padding-left: 30px;
  color: var(--ifm-footer-link-color);
}

.footer__link-item a {
  text-decoration: none;
}

.footer-twitter-footer {
  background: url(@site/static/img/showcase/twitter-footer-light.svg) no-repeat;
  content: 'Footer';
  display: inline-flexbox;
  padding-left: 30px;
  color: var(--ifm-footer-link-color);
}

[data-theme='dark'] .footer-twitter-footer {
  background: url('@site/static/img/showcase/twitter-footer-dark.svg') no-repeat;
}

[data-theme='dark'] .footer-gh-footer {
  background: url('@site/static/img/showcase/gh-footer-dark.svg') no-repeat;
}

.footer-discord-footer {
  background: url(@site/static/img/showcase/discord-footer-light.svg) no-repeat;
  content: 'Footer';
  display: inline-flexbox;
  padding-left: 30px;
  color: var(--ifm-footer-link-color);
}

[data-theme='dark'] .footer-discord-footer {
  background: url('@site/static/img/showcase/discord-footer-dark.svg') no-repeat;
}

.header-showcase-link:after {
  background: url('@site/static/img/showcase/showcase-icon-dark.svg') no-repeat;
  content: '';
  display: inline-flexbox;
  padding-left: 28px;
}

.iconExternalLink_node_modules-\@docusaurus-theme-classic-lib-theme-Icon-ExternalLink-styles-module {
  display: none;
}

.header-showcase-link:hover::after {
  background: url('@site/static/img/showcase/showcase-icon-hover.svg') no-repeat;
}

[data-theme='dark'] .header-showcase-link:hover::after {
  background: url('@site/static/img/showcase/showcase-icon-hover.svg') no-repeat;
}

[data-theme='dark'] .header-showcase-link:after {
  background: url('@site/static/img/showcase/showcase-icon-white.svg') no-repeat;
}

[data-theme='dark'] .navbar {
  background-color: #202429;
}

.navbar__link {
  font-weight: 300;
}

.navbar__link--active {
  text-decoration: none;
  color: var(--ifm-navbar-link-color);
  font-weight: var(--ifm-font-weight-semibold);
}

.navbar__item {
  padding: 5px;
  font-weight: 300;
}

[data-theme='dark'] .navbar__item {
  padding: 5px;
  font-weight: 300;
}

[data-theme='light'] .banner {
  color: #000000;
}

[data-theme='dark'] .showcaseSection {
  border: 1px solid #131419;
}

.showcaseSection:hover {
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  box-shadow: 0px 2px 24px hsla(237, 19%, 13%, 1);
  transition: transform 0.25s ease-in-out;
}

.markdown code {
  white-space: pre;
}

